--- a/zap/zap-config/compassTest.yaml
+++ b/zap/zap-config/compassTest.yaml
@@ -111,7 +111,39 @@ jobs:
   type: "passiveScan-wait"
 - parameters:
     template: "risk-confidence-html"
+    theme: "original"
+    reportDir: "/zap/reports"
+    reportFile: ""
     reportTitle: "ZAP Scanning Report"
     reportDescription: ""
+    displayReport: false
+  risks:
+  - "info"
+  - "low"
+  - "medium"
+  - "high"
+  confidences:
+  - "falsepositive"
+  - "low"
+  - "medium"
+  - "high"
+  - "confirmed"
+  sections:
+  - "siteRiskCounts"
+  - "responseBody"
+  - "appendix"
+  - "alertTypes"
+  - "responseHeader"
+  - "alertTypeCounts"
+  - "riskConfidenceCounts"
+  - "alerts"
+  - "aboutThisReport"
+  - "contents"
+  - "requestBody"
+  - "reportDescription"
+  - "reportParameters"
+  - "requestHeader"
+  - "summaries"
+  sites: []
   name: "report"
   type: "report"
