--- a/.github/workflows/zapScanAuto.yaml
+++ b/.github/workflows/zapScanAuto.yaml
@@ -14,6 +14,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Setup Report Directory
+      run: |
+        mkdir -p ${{ github.workspace }}/zap/reports
+        sudo chmod -R 777 ${{ github.workspace }}/zap/reports
+
     - name: Replace secrets in compassTest.yaml
       run: |
         sed -i 's/\${USERNAME}/${{ secrets.USERNAME }}/g' zap/zap-config/compassTest.yaml
@@ -21,10 +26,10 @@ jobs:
 
     - name: Pull ZAP Docker Image
       run: docker pull softwaresecurityproject/zap-stable:latest
-
+    
     - name: Run ZAP Automation Framework
       run: |
         docker run \
         -v ${{ github.workspace }}/zap/zap-config:/zap/zap-config \
         -v ${{ github.workspace }}/zap/reports:/zap/reports \
-        softwaresecurityproject/zap-stable:latest zap.sh -cmd -autorun /zap/zap-config/compassTest.yaml
+        softwaresecurityproject/zap-stable:latest bash -c "mkdir -p /zap/reports && zap.sh -cmd -autorun /zap/zap-config/compassTest.yaml"
