--- a/zap/zap-config/compassTest.yaml
+++ b/zap/zap-config/compassTest.yaml
@@ -3,7 +3,7 @@ env:
   contexts:
   - name: "Authentication Test"
     urls:
-    - "https://compass.gww.gov.bc.ca/"
+    - "https://logon7.gov.bc.ca"
     includePaths:
     - "https://logon7.gov.bc.ca.*"
     excludePaths: []
@@ -35,8 +35,8 @@ env:
     users:
     - name: "${USERNAME}"
       credentials:
-        password: ${PASSWORD}
-        username: ${USERNAME}
+        password: "${PASSWORD}"
+        username: "${USERNAME}"
   - name: "Default Context"
     urls:
     - "https://compass.gww.gov.bc.ca/"
@@ -63,7 +63,9 @@ env:
   vars: {}
 jobs:
 - parameters:
+    maxAlertsPerRule: 0
     scanOnlyInScope: true
+    maxBodySizeInBytesToScan: 0
     enableTags: false
     disableAllRules: false
   rules: []
@@ -71,7 +73,7 @@ jobs:
   type: "passiveScan-config"
 - parameters:
     context: "Default Context"
-    user: ${USERNAME}
+    user: "${USERNAME}"
     url: ""
     maxDuration: 0
     maxDepth: 0
@@ -88,7 +90,7 @@ jobs:
     name: "At least 100 URLs found"
 - parameters:
     context: "Default Context"
-    user: ${USERNAME}
+    user: "${USERNAME}"
     url: ""
     maxDuration: 60
     maxCrawlDepth: 10
@@ -112,7 +114,7 @@ jobs:
 - parameters:
     template: "risk-confidence-html"
     theme: "original"
-    reportDir: "/zap/reports"
+    reportDir: "\"
     reportFile: ""
     reportTitle: "ZAP Scanning Report"
     reportDescription: ""
@@ -147,3 +149,4 @@ jobs:
   sites: []
   name: "report"
   type: "report"
+
