--- a/zap/zap-config/compassTest.yaml
+++ b/zap/zap-config/compassTest.yaml
@@ -114,7 +114,7 @@ jobs:
 - parameters:
     template: "risk-confidence-html"
     theme: "original"
-    reportDir: "\"
+    reportDir: "zap/"
     reportFile: ""
     reportTitle: "ZAP Scanning Report"
     reportDescription: ""
